--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     color: rgb(200, 200, 200);
     font-size: 16px;
     line-height: 1.5;
+    min-height: 100vh;
 }
 
 
@@ -13,7 +14,6 @@ aside {
     background-image: url('bg-scouts.jpg');
     background-size: cover;
     background-position: 60% 0%;
-    height: 100vh;
 }
 
 @font-face {
@@ -76,8 +76,18 @@ h3 {
     width: 45%;
 }
 
+
+input {
+    background-color: black;
+    border: solid 1px grey;
+    border-radius: 5px;
+    color: rgb(200, 200, 200);
+    font-size: 14px;
+
+}
+
 label {
-    font-size: 12px;
+    font-size: 11px;
 }
 
 form {
@@ -86,17 +96,35 @@ form {
     gap: 20px;
 }
 
+#motto+p+p {
+    padding-top: 20px;
+    border-top: solid 2px red;
+}
+
 button {
     display: block;
     padding: 10px 30px;
     font-size: 20px;
     border: solid 3px rgba(222, 4, 4, 0.789);
     border-radius: 20px;
-    color: rgba(222, 4, 4, 0.789);
+    color: red;
     margin-top: 20px;
     margin-bottom: 30px;
+    background-color: black;
+    font-weight: 800;
+}
+
+button:hover {
+    color: black;
+    background-color: rgba(222, 4, 4, 0.789);
 }
 
 a {
     color: rgba(222, 4, 4, 0.789);
+    font-weight: 900;
+    text-decoration: none;
+}
+
+a:hover {
+    color: white
 }
