--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     min-height: 100vh;
+    flex-wrap: wrap;
 }
 
 
@@ -14,6 +15,7 @@ aside {
     background-image: url('bg-scouts.jpg');
     background-size: cover;
     background-position: 60% 0%;
+    width: 40vw;
 }
 
 @font-face {
@@ -32,7 +34,7 @@ aside {
     gap: 20px;
     padding: 0px 100px;
     margin-top: 40px;
-    background-color: rgba(255, 255, 255, 0.2)
+    background-color: rgba(0, 0, 0, 0.5)
 }
 
 #logo {
@@ -51,6 +53,7 @@ main {
     display: flex;
     flex: 1;
     flex-direction: column;
+    width: 60vw;
 }
 
 #motto {
